--- a/Monorail/Scenario2_ManagingMicrobit.xaml
+++ b/Monorail/Scenario2_ManagingMicrobit.xaml
@@ -18,8 +18,8 @@
 
             <ScrollViewer HorizontalAlignment="Left" VerticalAlignment="Top" VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="180" Margin="0,0,0,5">
                 <StackPanel Orientation="Vertical" Padding="5,5,5,5">
-                    <TextBlock FontStyle="Italic" FontSize="12">Name : <Run x:Name="localSettingName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
-                    <TextBlock FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="localSettingAddress" Text=""/></TextBlock>
+                    <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontSize="12">Name : <Run x:Name="localSettingName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
+                    <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontSize="10" FontWeight="Normal">Address : <Run x:Name="localSettingAddress" Text=""/></TextBlock>
                 </StackPanel>
             </ScrollViewer>
 
