--- a/Monorail/Styles/Styles.xaml
+++ b/Monorail/Styles/Styles.xaml
@@ -163,6 +163,12 @@
         <Setter Property="FontSize" Value="16"/>
     </Style>
 
+    <Style x:Key="StatusTextStyle" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="FontWeight" Value="Light"/>
+        <Setter Property="FontSize" Value="12"/>
+    </Style>
+
     <Style x:Key="BaseMessageStyle" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="FontWeight" Value="SemiLight"/>
