--- a/Monorail/Scenario4_ManagingMicrobit.xaml
+++ b/Monorail/Scenario4_ManagingMicrobit.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Monorail.Scenario3_ManagingMicrobit"
+    x:Class="Monorail.Scenario4_ManagingMicrobit"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Monorail"
@@ -12,7 +12,7 @@
 
         <StackPanel Orientation="Vertical" Padding="5,5,5,5">
 
-            <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Managing micro:bit board (BlockyTalky)</TextBlock>
+            <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Managing micro:bit board (Led)</TextBlock>
 
             <Image x:Name="ImageMicrobit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="148" Height="120" Source="Assets/microbit.png" Margin="0,0,0,5" />
 
@@ -23,14 +23,15 @@
                 </StackPanel>
             </ScrollViewer>
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,5">
-                <Button x:Name="ButtonA" Style="{StaticResource ButtonStyle}" Content="A" Click="{x:Bind ButtonA_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-                <Button x:Name="ButtonB" Style="{StaticResource ButtonStyle}" Content="B" Click="{x:Bind ButtonB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-                <Button x:Name="ButtonAB" Style="{StaticResource ButtonStyle}" Content="A + B" Click="{x:Bind ButtonAB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-            </StackPanel>
+            <StackPanel Orientation="Horizontal">
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
-                <Button x:Name="ButtonAfficher" Style="{StaticResource ButtonStyle}" Content="Afficher" Click="{x:Bind ButtonAfficher_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                <ComboBox Grid.Row="0" Grid.Column="1" x:Name="ComboBox" Width="100" Margin="0,0,5,0">
+                    <x:String>Justine</x:String>
+                    <x:String>Pauline</x:String>
+                </ComboBox>
+
+                <Button x:Name="Button" Style="{StaticResource ButtonStyle}" Content="Message" Click="{x:Bind Button_Click}" Width="80" Height="30" Margin="0,0,0,0" />
+                
             </StackPanel>
 
         </StackPanel>
