--- a/Monorail/Scenario4_ManagingMicrobit.xaml
+++ b/Monorail/Scenario4_ManagingMicrobit.xaml
@@ -23,6 +23,18 @@
                 </StackPanel>
             </ScrollViewer>
 
+            <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Managing micro:bit board (Led Matrix)</TextBlock>
+
+            <StackPanel Orientation="Horizontal">
+
+                <Button x:Name="Button1" Click="{x:Bind Button_Click}" Width="20" Height="40" Margin="5,0,0,5" />
+                <Button x:Name="Button2" Click="{x:Bind Button_Click}" Width="20" Height="40" Margin="5,0,0,5" />
+                <Button x:Name="Button3" Click="{x:Bind Button_Click}" Width="20" Height="40" Margin="5,0,0,5" />
+                <Button x:Name="Button4" Click="{x:Bind Button_Click}" Width="20" Height="40" Margin="5,0,0,5" />
+                <Button x:Name="Button5" Click="{x:Bind Button_Click}" Width="20" Height="40" Margin="5,0,0,5" />
+                
+            </StackPanel>
+
             <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Managing micro:bit board (Led Text)</TextBlock>
             
             <StackPanel Orientation="Horizontal">
@@ -38,6 +50,11 @@
 
             <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Managing micro:bit board (Led Scrolling Delay)</TextBlock>
 
+            
+            
+            
+            
+            
             <Button x:Name="ButtonScrollingDelay" Style="{StaticResource ButtonStyle}" Content="Lire" Click="{x:Bind ButtonScrollingDelay_Click}" Width="80" Height="30" Margin="0,0,0,0" />
 
         </StackPanel>
