--- a/Manege/MainPage.xaml
+++ b/Manege/MainPage.xaml
@@ -42,8 +42,6 @@
                 </ToggleButton>
             </Border>
 
-            <Image x:Name="WindowsLogo" Stretch="None" Source="Assets/advitam-sdk.png" AutomationProperties.AccessibilityView="Raw" />
-
             <TextBlock x:Name="App_Title" FontFamily="Segoe UI" FontSize="12" Text="Application title" Style="{StaticResource PageHeaderTextStyle}" TextWrapping="Wrap" Margin="0,10,0,0" />
 
         </StackPanel>
@@ -58,7 +56,7 @@
 
                     <StackPanel x:Name="FooterPanel" Orientation="Vertical" RelativePanel.AlignBottomWithPanel="True">
 
-                        <Image Source="Assets/microsoft-sdk.png" AutomationProperties.Name="Microsoft Logo" Stretch="None" HorizontalAlignment="Left" Margin="10,0,0,0"/>
+                        <Image Source="Assets/windows.png" AutomationProperties.Name="Microsoft Logo" Stretch="None" HorizontalAlignment="Left" Margin="10,0,0,0"/>
 
                         <TextBlock x:Name="Copyright" Text="&#xA9; Microsoft Corporation. All rights reserved." Style="{StaticResource CopyrightTextStyle}" RelativePanel.Above="LinksPanel" Margin="10,10,0,0" TextWrapping="Wrap"/>
 
