--- a/Manege/Scenario2_ManagingMicrobit.xaml
+++ b/Manege/Scenario2_ManagingMicrobit.xaml
@@ -8,7 +8,51 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid x:Name="Microbit" Grid.Row="0">
+
+            <StackPanel Orientation="Vertical" Padding="5,5,5,5">
+
+                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Managing micro:bit board (BlockyTalky)</TextBlock>
+
+                <StackPanel Orientation="Horizontal">
+
+                    <Image x:Name="ImageMicrobit" Width="74" Height="60" Source="Assets/microbit.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
+
+                    <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="175">
+                        <StackPanel Orientation="Vertical" Padding="5,5,5,5">
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="12">Name : <Run x:Name="localSettingName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="localSettingAddress" Text=""/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Device Connected : <Run x:Name="MicrobitDeviceConnected" Text=""/></TextBlock>
+                        </StackPanel>
+                    </ScrollViewer>
+
+                </StackPanel>
+
+            </StackPanel>
+
+        </Grid>
+
+        <Grid x:Name="Button" Grid.Row="1">
+
+            <StackPanel Grid.Row="0" Orientation="Vertical" Padding="5,5,5,5">
+
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
+                    <Button x:Name="ButtonA" Style="{StaticResource ButtonStyle}" Content="A" Click="{x:Bind ButtonA_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                    <Button x:Name="ButtonB" Style="{StaticResource ButtonStyle}" Content="B" Click="{x:Bind ButtonB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                    <Button x:Name="ButtonAB" Style="{StaticResource ButtonStyle}" Content="A + B" Click="{x:Bind ButtonAB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                </StackPanel>
+
+            </StackPanel>
+
+        </Grid>
 
     </Grid>
+
 </Page>
