--- a/Manege/Scenario2_ManagingMicrobit.xaml
+++ b/Manege/Scenario2_ManagingMicrobit.xaml
@@ -41,7 +41,7 @@
 
         <Grid x:Name="Button" Grid.Row="1">
 
-            <StackPanel Grid.Row="0" Orientation="Horizontal" Padding="5,5,5,5">
+            <StackPanel Orientation="Horizontal" Padding="5,5,5,5">
 
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top">
                     <Button x:Name="ButtonA" Style="{StaticResource ButtonStyle}" Content="Marche" Click="{x:Bind ButtonA_Click}" Width="60" Height="30" Margin="0,0,10,10" />
