--- a/Monorail/Scenario1_PairingDevice.xaml
+++ b/Monorail/Scenario1_PairingDevice.xaml
@@ -44,31 +44,32 @@
             <StackPanel Orientation="Vertical" Padding="5,5,5,5">
 
                 <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Micro:bit board known</TextBlock>
-                
+
                 <StackPanel Orientation="Horizontal">
-                    
+
                     <Image x:Name="ImageMicrobit" Width="74" Height="60" Source="Assets/microbit.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
 
                     <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="175">
                         <StackPanel Orientation="Vertical" Padding="5,5,5,5">
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="12">Name : <Run x:Name="localSettingName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="localSettingAddress" Text=""/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="12">Name : <Run x:Name="MicrobitName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="MicrobitAddress" Text=""/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Device Connected : <Run x:Name="MicrobitDeviceConnected" Text=""/></TextBlock>
                         </StackPanel>
                     </ScrollViewer>
-                                       
+
                 </StackPanel>
-                
+
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
                     <Button x:Name="ButtonRed" Style="{StaticResource ButtonStyle}" Content="Rouge" Click="{x:Bind ButtonRed_Click}" Width="60" Height="30" Margin="0,0,5,0" />
                     <Button x:Name="ButtonBlue" Style="{StaticResource ButtonStyle}" Content="Bleu" Click="{x:Bind ButtonBlue_Click}" Width="60" Height="30" Margin="0,0,5,0" />
                     <Button x:Name="ButtonYellow" Style="{StaticResource ButtonStyle}" Content="Jaune" Click="{x:Bind ButtonYellow_Click}" Width="60" Height="30" Margin="0,0,5,0" />
                     <Button x:Name="ButtonGreen" Style="{StaticResource ButtonStyle}" Content="Vert" Click="{x:Bind ButtonGreen_Click}" Width="60" Height="30" Margin="0,0,5,0" />
                 </StackPanel>
-            
+
             </StackPanel>
 
         </Grid>
-        
+
         <Grid x:Name="Advertisement" Grid.Row="1">
 
             <StackPanel Grid.Row="0" Orientation="Vertical" Padding="5,5,5,5">
@@ -92,7 +93,7 @@
                 <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate Paired BLE Device</TextBlock>
 
                 <Button x:Name="EnumerateButtonDevice" Style="{StaticResource ButtonStyle}" Content="Run" Click="{x:Bind EnumerateButtonDevice_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-                
+
                 <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" Grid.Row="1" Margin="0,0,0,5" BorderBrush="White" BorderThickness="1" Height="50">
                     <ListView x:Name="ResultsListViewDevice" ItemTemplate="{StaticResource ResultsListViewDeviceTemplate}" ItemsSource="{x:Bind listDeviceInformationDisplay, Mode=OneWay}" SelectionMode="Single" SelectionChanged="ResultsListViewDevice_SelectionChanged" />
                 </ScrollViewer>
@@ -104,3 +105,4 @@
     </Grid>
 
 </Page>
+   
