--- a/Monorail/Scenario2_ManagingMicrobit.xaml
+++ b/Monorail/Scenario2_ManagingMicrobit.xaml
@@ -19,7 +19,7 @@
 
             <StackPanel Orientation="Vertical" Padding="5,5,5,5">
 
-                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Managing micro:bit board (UART)</TextBlock>
+                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Managing micro:bit board (BlockyTalky)</TextBlock>
 
                 <StackPanel Orientation="Horizontal">
 
@@ -29,6 +29,7 @@
                         <StackPanel Orientation="Vertical" Padding="5,5,5,5">
                             <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="12">Name : <Run x:Name="localSettingName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
                             <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="localSettingAddress" Text=""/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Device Connected : <Run x:Name="MicrobitDeviceConnected" Text=""/></TextBlock>
                         </StackPanel>
                     </ScrollViewer>
 
@@ -39,14 +40,11 @@
         </Grid>
 
         <Grid x:Name="Button" Grid.Row="1">
-            
-            <StackPanel Grid.Row="0" Orientation="Vertical" Padding="5,5,5,5">
 
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
-                    <Button x:Name="ButtonA" Style="{StaticResource ButtonStyle}" Content="A" Click="{x:Bind ButtonA_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-                    <Button x:Name="ButtonB" Style="{StaticResource ButtonStyle}" Content="B" Click="{x:Bind ButtonB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-                    <Button x:Name="ButtonAB" Style="{StaticResource ButtonStyle}" Content="A + B" Click="{x:Bind ButtonAB_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-                </StackPanel>
+            <StackPanel Orientation="Horizontal" Padding="5,5,5,5">
+
+                <Button x:Name="ButtonA" Style="{StaticResource ButtonStyle}" Content="Marche" Click="{x:Bind ButtonA_Click}" Width="60" Height="30" Margin="0,0,10,10" />
+                <Button x:Name="ButtonB" Style="{StaticResource ButtonStyle}" Content="Arrêt" Click="{x:Bind ButtonB_Click}" Width="60" Height="30" Margin="0,0,10,10" />
 
             </StackPanel>
 
