--- a/Gigabyte/Scenario1_PairingDevice.xaml
+++ b/Gigabyte/Scenario1_PairingDevice.xaml
@@ -39,31 +39,24 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid x:Name="Microbit" Grid.Row="0">
+        <Grid x:Name="Arduino" Grid.Row="0">
 
             <StackPanel Orientation="Vertical" Padding="5,5,5,5">
 
-                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Micro:bit board known</TextBlock>
+                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Arduino known</TextBlock>
 
                 <StackPanel Orientation="Horizontal">
 
-                    <Image x:Name="ImageMicrobit" Width="74" Height="60" Source="Assets/microbit.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
+                    <Image x:Name="ImageDevice" Width="74" Height="60" Source="Assets/arduino.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
 
                     <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="175">
                         <StackPanel Orientation="Vertical" Padding="5,5,5,5">
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="12">Name : <Run x:Name="MicrobitName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="MicrobitAddress" Text=""/></TextBlock>
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Device Connected : <Run x:Name="MicrobitDeviceConnected" Text=""/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="12">Name : <Run x:Name="ArduinoName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="ArduinoAddress" Text=""/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Device Connected : <Run x:Name="ArduinoConnected" Text=""/></TextBlock>
                         </StackPanel>
                     </ScrollViewer>
 
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
-                    <Button x:Name="ButtonRed" Style="{StaticResource ButtonStyle}" Content="Rouge" Click="{x:Bind ButtonRed_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-                    <Button x:Name="ButtonBlue" Style="{StaticResource ButtonStyle}" Content="Bleu" Click="{x:Bind ButtonBlue_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-                    <Button x:Name="ButtonYellow" Style="{StaticResource ButtonStyle}" Content="Jaune" Click="{x:Bind ButtonYellow_Click}" Width="60" Height="30" Margin="0,0,5,0" />
-                    <Button x:Name="ButtonGreen" Style="{StaticResource ButtonStyle}" Content="Vert" Click="{x:Bind ButtonGreen_Click}" Width="60" Height="30" Margin="0,0,5,0" />
                 </StackPanel>
 
             </StackPanel>
